--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -18,6 +18,7 @@
                 <On Platform="iOS" Value="Montserrat-Regular" />
             </OnPlatform>
 			<Color x:Key="Primary">#004899</Color>
+            <Color x:Key="BluOmal">#004899</Color>
 			<Color x:Key="PrimaryDark">Red</Color>
 			<Color x:Key="Accent">#96d1ff</Color>
 			<Color x:Key="LightBackgroundColor">#FAFAFA</Color>
@@ -148,7 +149,7 @@
             </Style>
             <Style TargetType="CControls:UnderlineLabel">
                 <Setter Property="FontFamily" Value="{StaticResource NormalFont}" />
-                <Setter Property="TextColor" Value="#60A5D1" />
+                <Setter Property="TextColor" Value="{StaticResource Primary}" />
             </Style>
 
             <Style x:Key="RossoNoBold" TargetType="Button">
