--- a/Omal/Views/ConfigurationV.xaml
+++ b/Omal/Views/ConfigurationV.xaml
@@ -26,7 +26,13 @@
             </Grid>
 <TableView Intent="Settings" Margin="5">
     <TableRoot>
-        <TableSection>
+        <TableSection x:Name="LocT">
+            <ViewCell x:Name="ModificaAccount" Tapped="Handle_Tapped_ModificaAccount">
+                <StackLayout  Orientation="Horizontal">
+                    <Label Text="{Binding StrModificaAccount, Converter={StaticResource UpperCaseConverter}}" Margin="5" Style="{StaticResource Titolo}"  VerticalOptions="Center" />
+                   
+                </StackLayout>
+            </ViewCell>
             <ViewCell Tapped="Handle_Tapped">
                 <StackLayout Orientation="Horizontal">
                     <Label Text="{Binding StrLingua, Converter={StaticResource UpperCaseConverter}}" Margin="5" Style="{StaticResource Titolo}"  VerticalOptions="Center" />
