--- a/Omal/Views/InformazioniAccount.xaml
+++ b/Omal/Views/InformazioniAccount.xaml
@@ -6,23 +6,23 @@ xmlns:CControls = "clr-namespace:Omal.CustomControls"
 
     >
      <ContentPage.ToolbarItems>
-        <ToolbarItem Text="{Binding BtnEdit}" Command="{Binding EditCommand}" />
+        <ToolbarItem Text="{Binding BtnEdit}" Command="{Binding SaveCommand}" />
     </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <ScrollView>
         <StackLayout Margin="5">
            <Label TextColor="{StaticResource BluOmal}" Style="{StaticResource WhiteEntry}" Text="{Binding StrNomeUtente}"   />
            <CControls:CualevaRoundedEntry IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"   LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"    
-                    Placeholder="{Binding StrNomeUtente}" Text="{Binding NomeUtente, Mode=TwoWay}" />
+                    Placeholder="{Binding StrNomeUtente}" Text="{Binding NomeUtente, Mode=TwoWay}" TextColor="Black" />
            <Label TextColor="{StaticResource BluOmal}" Style="{StaticResource WhiteEntry}" Text="{Binding StrEmailBackOffice}"  />
-            <CControls:CualevaRoundedEntry IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"  Style="{StaticResource email}" LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"    
+            <CControls:CualevaRoundedEntry TextColor="Black"  IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"  Style="{StaticResource email}" LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"    
                     Placeholder="{Binding StrEmailBackOffice}" Text="{Binding EmailBackOffice, Mode=TwoWay}" />
            <Label TextColor="{StaticResource BluOmal}" Style="{StaticResource WhiteEntry}" Text="{Binding StrEmail}"  />
            <CControls:CualevaRoundedEntry IsEnabled="false" BackgroundColor="Transparent"  Style="{StaticResource email}" LeftPadding="10"  BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"  x:Name="UserName"  Placeholder="Indirizzo Email" Text="{Binding Email}" />
            <Label TextColor="{StaticResource BluOmal}" Style="{StaticResource WhiteEntry}" Text="Password"  />
-           <CControls:CualevaRoundedEntry IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"  Style="{StaticResource psw}" LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"   x:Name="Password" 
+           <CControls:CualevaRoundedEntry TextColor="Black" IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"  Style="{StaticResource psw}" LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"   x:Name="Password" 
                     Placeholder="Password" IsPassword="true" Text="{Binding Password}" />
-                <CControls:CualevaRoundedEntry IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"  Style="{StaticResource psw}" LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"   x:Name="PasswordRepeat" 
+            <CControls:CualevaRoundedEntry TextColor="Black" IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"  Style="{StaticResource psw}" LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"   x:Name="PasswordRepeat" 
                     Placeholder="{Binding StrConfermaPassword}" IsPassword="true" Text="{Binding PasswordRepeat}" />
         </StackLayout>
             </ScrollView>
