--- a/Omal/Views/OmalContactPageV.xaml
+++ b/Omal/Views/OmalContactPageV.xaml
@@ -4,37 +4,32 @@
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
-    BackgroundColor="White"
     x:Class="Omal.Views.OmalContactPageV">
 	<ContentPage.Content>
         <ScrollView>
-        <StackLayout HorizontalOptions="Center" VerticalOptions="StartAndExpand" Padding="30">
-            <StackLayout BackgroundColor="#EAEAEA" Margin="-30,-30,-30,0"> 
-                 <Label Margin="0,5,0,0" Text="030.8900145"  x:Name="Tel" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
-                 <Label Text="info@omal.it" x:Name="Email" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
-                 <Label Text="www.omal.it" x:Name="Sito" TextColor="Blue" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />       
+        <StackLayout HorizontalOptions="Center" VerticalOptions="StartAndExpand" Padding="30" >
+            <StackLayout BackgroundColor="White" Margin="-30,-30,-30,5"> 
+                 <Button HorizontalOptions="Fill" Style="{StaticResource GrigioBold}" FontSize="25"  Text="030 8900145" Clicked="TelClicked" Margin="40,5,40,5" />
+                 <Label Text="info@omal.it" FontFamily="{StaticResource BoldFont}" x:Name="Email" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
+                 <Label Text="www.omal.it"  FontFamily="{StaticResource BoldFont}" Margin="0" x:Name="Sito" TextColor="{StaticResource BluOmal}" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />       
             </StackLayout>
-        <Label Margin="5" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="HEADQUARTERS"/>
-                
-        <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Via Ponte Nuovo 11" />
-        <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Rodengo Saiano" />
-        <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Brescia, Italia" />
-          
-        <maps:Map Margin="10" HorizontalOptions="Fill" WidthRequest="400" HeightRequest="400"
-            x:Name="MyMap"
-            IsShowingUser="true"
-            MapType="Hybrid"
-        />
-          <Label Margin="5,30,5,5" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="{Binding StrSedeProduttiva, Converter={StaticResource UpperCaseConverter}}"/>
-          <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Via Brognolo 12" />
-            <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Passirano" />
-            <Label HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Brescia, Italia" />
-            <maps:Map HorizontalOptions="FillAndExpand" HeightRequest="400" WidthRequest="400"
-            x:Name="MyMap2"
-            IsShowingUser="true"
-            MapType="Hybrid"
-        />
-    </StackLayout>
-            </ScrollView>
+            <StackLayout BackgroundColor="White" Margin="-30,5,-30,5">
+                <Label Margin="5,5,5,0" FontFamily="{StaticResource NormalFont}" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="HEADQUARTERS"/>
+                <Label FontFamily="{StaticResource BoldFont}"  HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Via Ponte Nuovo 11 - 250505 Rodengo Saiano" />
+                <Label FontFamily="{StaticResource BoldFont}"  HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Brescia, Italia" />
+                <maps:Map Margin="5" HorizontalOptions="Fill" HeightRequest="400" x:Name="MyMap" IsShowingUser="true" MapType="Street" />
+            </StackLayout>
+            <StackLayout BackgroundColor="White" Margin="-30,5,-30,5">
+              <Label Margin="5,5,5,0" FontFamily="{StaticResource NormalFont}" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="{Binding StrSedeProduttiva, Converter={StaticResource UpperCaseConverter}}"/>
+                <Label FontFamily="{StaticResource BoldFont}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Via Brognolo 12 - 25050 Passirano" />
+                <Label FontFamily="{StaticResource BoldFont}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Brescia, Italia" />
+                <maps:Map Margin="5" HorizontalOptions="Fill" HeightRequest="400" 
+                x:Name="MyMap2"
+                IsShowingUser="true"
+                MapType="Street"
+                />
+            </StackLayout>
+                </StackLayout>
+        </ScrollView>
 	</ContentPage.Content>
 </ContentPage>
