--- a/Omal/Views/ModificaAccountV.xaml
+++ b/Omal/Views/ModificaAccountV.xaml
@@ -12,7 +12,7 @@ xmlns:CControls = "clr-namespace:Omal.CustomControls"
         <ScrollView>
         <StackLayout Margin="5">
             <Label TextColor="{StaticResource BluOmal}" Style="{StaticResource WhiteEntry}" Text="{Binding StrEmail}"  />
-            <Label TextColor="Black"  Text="{Binding Email}" Margin="0,0,0,20"  />
+            <Label TextColor="Black"  Text="{Binding Email}"  />
            <Label TextColor="{StaticResource BluOmal}" Style="{StaticResource WhiteEntry}" Text="{Binding StrNomeUtente}"   />
            <CControls:CualevaRoundedEntry IsEnabled="{Binding IsRunning, Converter={StaticResource InverseBooleanConverter}}" BackgroundColor="Transparent"   LeftPadding="10" BorderRadius="10" HeightRequest="50" CualevaRoundedEntryBackgroundColor="#FFFFFF"    
                     Placeholder="{Binding StrNomeUtente}" Text="{Binding NomeUtente, Mode=TwoWay}" TextColor="Black" />
