--- a/Omal/Views/OmalContactPageV.xaml
+++ b/Omal/Views/OmalContactPageV.xaml
@@ -4,23 +4,18 @@
     xmlns="http://xamarin.com/schemas/2014/forms" 
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
     xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
-    x:Class="Omal.Views.OmalContactPageV">
+    x:Class="Omal.Views.OmalContactPageV" BackgroundColor="White">
 	<ContentPage.Content>
         <ScrollView>
-        <StackLayout HorizontalOptions="Center" VerticalOptions="StartAndExpand" Padding="30" >
-            <StackLayout BackgroundColor="White" Margin="-30,-30,-30,5"> 
-                 <Button HorizontalOptions="Fill" Style="{StaticResource GrigioBold}" FontSize="25"  Text="030 8900145" Clicked="TelClicked" Margin="40,5,40,5" />
+            <StackLayout Margin="5">
+                 <Button Image="contatti_30.png" HeightRequest="40"  HorizontalOptions="Fill" Style="{StaticResource GrigioBold}"  Text="030 8900145" Clicked="TelClicked" Margin="40,5,40,5" />
                  <Label Text="info@omal.it" FontFamily="{StaticResource BoldFont}" x:Name="Email" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />
                  <Label Text="www.omal.it"  FontFamily="{StaticResource BoldFont}" Margin="0" x:Name="Sito" TextColor="{StaticResource BluOmal}" HorizontalOptions="Fill" HorizontalTextAlignment="Center" />       
-            </StackLayout>
-            <StackLayout BackgroundColor="White" Margin="-30,5,-30,5">
                 <Label Margin="5,5,5,0" FontFamily="{StaticResource NormalFont}" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="HEADQUARTERS"/>
                 <Label FontFamily="{StaticResource BoldFont}"  HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Via Ponte Nuovo 11 - 250505 Rodengo Saiano" />
                 <Label FontFamily="{StaticResource BoldFont}"  HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Brescia, Italia" />
                 <maps:Map Margin="5" HorizontalOptions="Fill" HeightRequest="300" x:Name="MyMap" IsShowingUser="true" MapType="Street" />
-            </StackLayout>
-            <StackLayout BackgroundColor="White" Margin="-30,5,-30,5">
-              <Label Margin="5,5,5,0" FontFamily="{StaticResource NormalFont}" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="{Binding StrSedeProduttiva, Converter={StaticResource UpperCaseConverter}}"/>
+               <Label Margin="5,5,5,0" FontFamily="{StaticResource NormalFont}" Style="{StaticResource Titolo}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="{Binding StrSedeProduttiva, Converter={StaticResource UpperCaseConverter}}"/>
                 <Label FontFamily="{StaticResource BoldFont}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Via Brognolo 12 - 25050 Passirano" />
                 <Label FontFamily="{StaticResource BoldFont}" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" Text="Brescia, Italia" />
                 <maps:Map Margin="5" HorizontalOptions="Fill" HeightRequest="300" 
@@ -28,7 +23,6 @@
                 IsShowingUser="true"
                 MapType="Street"
                 />
-            </StackLayout>
                 </StackLayout>
         </ScrollView>
 	</ContentPage.Content>
