--- a/Omal/App.xaml
+++ b/Omal/App.xaml
@@ -125,6 +125,7 @@
                 <Setter Property="BorderRadius" Value="{StaticResource BorderRadius}" />
                 <Setter Property="BackgroundColor" Value="#FFFFFF" />
                 <Setter Property="Margin" Value="5" />
+                <Setter Property="HeightRequest" Value="40" />
                 <Setter Property="HorizontalOptions" Value="End" />
                 <Setter Property="FontFamily" Value="{StaticResource NormalFont}" />
             </Style>
